ci: :green_heart: add fetch depth to checkout

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: Semver release
         id: release
         uses: oknozor/cocogitto-action@v2
