ci: :green_heart: disable commit checks for deployment and use latest tag only for push

--- a/.github/workflows/cocogitto-check.yml
+++ b/.github/workflows/cocogitto-check.yml
@@ -8,6 +8,7 @@ jobs:
       - uses: actions/checkout@main
         with:
           fetch-depth: 0
-
       - name: Conventional commits check
         uses: oknozor/cocogitto-action@v2
+        with:
+          check-latest-tag-only: true
