--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "pocketbase": "^0.14.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "typescript": "5.0.4"
   }
 }
