ci: :construction_worker: update CI step names

--- a/.github/workflows/build-server.yml
+++ b/.github/workflows/build-server.yml
@@ -9,7 +9,7 @@ defaults:
     working-directory: server
 
 jobs:
-  lint-and-build-app:
+  build-pocketbase:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
