--- a/.github/workflows/lint-and-build-frontend.yml
+++ b/.github/workflows/lint-and-build-frontend.yml
@@ -5,7 +5,7 @@ on:
   - pull_request
 
 jobs:
-  lint-and-build-app:
+  lint-and-build-frontend:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
