--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -22,7 +22,7 @@ env:
   IMAGE_NAME_SERVER: ${{ github.repository }}-server
 
 jobs:
-  build-and-push-image:
+  setup:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -40,29 +40,36 @@ jobs:
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Extract frontend metadata (tags, labels) for Docker
-        id: meta-frontend
+  build-and-push:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    strategy:
+      fail-fast: false
+      matrix:
+        image:
+          - ${{ env.IMAGE_NAME_FRONTEND }}
+          - ${{ env.IMAGE_NAME_SERVER }}
+        context:
+          - "."
+          - "server"
+        include:
+          - image: ${{ env.IMAGE_NAME_FRONTEND }}
+            context: "."
+          - image: ${{ env.IMAGE_NAME_SERVER }}
+            context: "server"
+    steps:
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_FRONTEND }}
-      - name: Build and push frontend Docker image
+          images: ${{ env.REGISTRY }}/${{ matrix.image }}
+      - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
-          context: .
+          context: ${{ matrix.context }}
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ steps.meta-frontend.outputs.tags }}
-          labels: ${{ steps.meta-frontend.outputs.labels }}
-      - name: Extract server metadata (tags, labels) for Docker
-        id: meta-server
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_SERVER }}
-      - name: Build and push server Docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: server
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: ${{ steps.meta-server.outputs.tags }}
-          labels: ${{ steps.meta-server.outputs.labels }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
