--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -34,11 +34,11 @@ jobs:
         context:
           - "."
           - "server"
-        include:
+        exclude:
           - image: ${{ github.repository }}-frontend
-            context: "."
-          - image: ${{ github.repository }}-server
             context: "server"
+          - image: ${{ github.repository }}-server
+            context: "."
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
