ci: :construction_worker: replace `exclude` logic with more readable `include` for context

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -31,14 +31,11 @@ jobs:
         image:
           - ${{ github.repository }}-frontend
           - ${{ github.repository }}-server
-        context:
-          - "."
-          - "server"
-        exclude:
+        include:
           - image: ${{ github.repository }}-frontend
-            context: "server"
-          - image: ${{ github.repository }}-server
             context: "."
+          - image: ${{ github.repository }}-server
+            context: "server"
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
