--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "embla-carousel-react": "^8.0.0-rc03",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "meilisearch": "^0.32.3",
     "next": "13.3.4",
     "pocketbase": "^0.14.3",
     "react": "18.2.0",
