feat(tagger): :sparkles: add multi-stage Dockerfile with Gunicorn and `deps` step to clone detr-resnet-50 repo with Git LFS

--- a/tagger/Dockerfile
+++ b/tagger/Dockerfile
@@ -1,4 +1,15 @@
-FROM python:3.10-slim-buster
+FROM jgpelaez/git-lfs AS deps
+
+WORKDIR /tagger
+
+RUN git clone https://huggingface.co/facebook/detr-resnet-50
+
+WORKDIR /tagger/detr-resnet-50
+
+RUN git lfs install
+RUN git lfs pull
+
+FROM python:3.10
 
 WORKDIR /tagger
 
@@ -7,6 +18,15 @@ RUN pip3 install -r requirements.txt
 
 COPY . .
 
-EXPOSE 5000
+ENV DETR_RESNET_50_MODEL_PATH=./detr-resnet-50
+COPY --from=deps /tagger/detr-resnet-50 ./detr-resnet-50
 
-CMD [ "python3", "-m" , "flask", "run", "--host=0.0.0.0"]
+RUN mkdir /tagger/torch
+RUN mkdir /tagger/cache
+
+ENV TORCH_HOME=/tagger/torch
+ENV TRANSFORMERS_CACHE=/tagger/cache/huggingface/hub
+
+EXPOSE 80
+
+CMD ["gunicorn", "--conf", "gunicorn_conf.py", "--bind", "0.0.0.0:80", "app:app"]
