feat: :sparkles: implement settings page with API keys management and creation

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/server": "^11.10.0",
     "@mantine/carousel": "^6.0.10",
     "@mantine/core": "^6.0.10",
+    "@mantine/dates": "^6.0.11",
     "@mantine/dropzone": "^6.0.10",
     "@mantine/form": "^6.0.10",
     "@mantine/hooks": "^6.0.10",
@@ -25,6 +26,7 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.7",
     "embla-carousel-react": "^8.0.0-rc03",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
