feat: :sparkles: use UUID to track uploads and display multiple indicators

--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-query": "^3.39.3",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.1"
   }
 }
