--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -84,7 +84,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: ./out
+          path: ./docs/out
 
   # Deployment job
   deploy:
