--- a/docs/package.json
+++ b/docs/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/server": "^11.11.0",
+    "@fontsource/fira-code": "^5.0.0",
     "@fontsource/inter": "^5.0.0",
     "@mantine/carousel": "^6.0.11",
     "@mantine/core": "^6.0.11",
